Refined pom.xml